--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>8.0.33</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
+        </dependency>
+
 
         <!-- Test dependency (optional) -->
         <dependency>
