--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- ✅ JSP API for Tomcat 10 -->
+        <dependency>
+            <groupId>jakarta.servlet.jsp</groupId>
+            <artifactId>jakarta.servlet.jsp-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
